--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,97 @@
 .primary-color{
-    background-color: #000000  !important;
+    background-color: #3F51B5  !important;
 }
 
+.dark-primary-color {
+    background: #303F9F !important;
+}
 
 .accent-color {
-    background: #000000 !important;
+    background: #FF9800 !important;
 }
 
 .white-color {
     background-color: #000000 !important;
 }
+
+.light-primary-color   { 
+    background: #C5CAE9; 
+}
+
+.text-primary-color    {
+    color: #FFFFFF; 
+}
+
+.accent-color          { 
+    background: #FF9800; 
+}
+
+.primary-text-color    { 
+    color: #212121; 
+}
+
+.secondary-text-color  {
+    color: #757575; 
+}
+
+.divider-color         { 
+    border-color: #BDBDBD; 
+}
+
+.delete-card {
+    position: absolute !important;
+    right: 5px;
+    top: 5px;
+}
+
+#nav {
+  list-style: none;
+  /* padding: 0;
+  margin: 0; */
+  /* background: #1bc2a2; */
+}
+
+#nav li {
+  display: block;
+  position: relative;
+  /* float: left; */
+  /* background: #1bc2a2; */
+}
+
+#nav li ul { display: none; z-index: 10000;}
+
+#nav li a {
+  display: block;
+  padding-left: 1em;
+  padding-right: 1em;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #fff;
+}
+
+/* #nav li a:hover { background: #2c3e50; } */
+
+#nav li:hover > ul {
+  display: block;
+  position: absolute;
+}
+
+#nav li:hover li { float: none; }
+
+#nav li:hover a { background: #303F9F; }
+
+#nav li:hover li a:hover { background: #3F51B5; }
+
+#nav li ul li { border-top: 0; }
+
+#nav ul ul {
+  left: 100%;
+  top: 0;
+}
+
+#nav:before, #nav:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
+}
+
+#nav:after { clear: both; }
