--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,8 +10,12 @@
     background: #FF9800 !important;
 }
 
-.white-color {
+.black-color {
     background-color: #000000 !important;
+}
+
+.white-color {
+    background: #FFFFFF;
 }
 
 .light-primary-color   { 
@@ -44,54 +48,55 @@
     top: 5px;
 }
 
+body, html{
+    background: #FFFFFF;
+}
+
 #nav {
-  list-style: none;
-  /* padding: 0;
-  margin: 0; */
-  /* background: #1bc2a2; */
+    list-style: none;
+    height: 100px;
+    /* padding: 0;
+    margin: 0; */
+    /* background: #1bc2a2; */
 }
 
-#nav li {
-  display: block;
-  position: relative;
-  /* float: left; */
-  /* background: #1bc2a2; */
+#nav li a, p{
+    vertical-align: middle;
+    line-height: 100px;
+    height: 100px;
+    color: #212121;
 }
 
-#nav li ul { display: none; z-index: 10000;}
-
-#nav li a {
-  display: block;
-  padding-left: 1em;
-  padding-right: 1em;
-  text-decoration: none;
-  white-space: nowrap;
-  color: #fff;
+#nav li p:hover {
+    background: #C5CAE9;
 }
 
-/* #nav li a:hover { background: #2c3e50; } */
-
-#nav li:hover > ul {
-  display: block;
-  position: absolute;
+#submenu {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 0;
 }
 
-#nav li:hover li { float: none; }
-
-#nav li:hover a { background: #303F9F; }
-
-#nav li:hover li a:hover { background: #3F51B5; }
-
-#nav li ul li { border-top: 0; }
-
-#nav ul ul {
-  left: 100%;
-  top: 0;
+#submenu ul {
+    display: block;
 }
 
-#nav:before, #nav:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
+#submenu li {
+    display: block;
+    width: 100%;
 }
 
-#nav:after { clear: both; }
+#submenu li a {
+    color: #212121;
+    display: block;
+    width: 100%;
+}
+
+.menuSelected {
+    border-bottom: #FF9800 3px solid;
+}
+
+.submenuSelected {
+    border-right: #FF9800 3px solid;
+}
